# Opengl-framework

./: .gitignore  CMakeLists.txt  README.md
engine/: input.cpp  input.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  texture.cpp  texture.h  utils.hpp  vector3.cpp  vector3.h
engine/assets/: cube.mtl
engine/shaders/: frag.frag  vertex.vert
game/: main.cpp
